# game-template

./: CMakeLists.txt  README.md  vcpkg.json
src/: audio.cpp  audio.hpp  display.cpp  display.hpp  font.cpp  font.hpp  main.cpp  music.cpp  music.hpp  scene.hpp  sdl.cpp  sdl.hpp  sdl_image.cpp  sdl_image.hpp  sdl_mixer.cpp  sdl_mixer.hpp  sdl_ttf.cpp  sdl_ttf.hpp  sound.cpp  sound.hpp  texture.cpp  texture.hpp
src/scenes/game/: game_scene.cpp  game_scene.hpp
